--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "http-server examples/ -c-1 -o",
     "build-less": "lessc examples/src/less/index.less examples/build/css/index.css && echo 'Less compiled'",
     "build-js": "browserify examples/src/js/index.js -o examples/build/js/index.js",
+    "build-zach": "browserify examples/src/js/zach-index.jsx -o examples/build/js/zach-index-compiled2.js",
     "watch-js": "watchify examples/src/js/index.js -o examples/build/js/index.js -v",
     "build-dirs": "mkdir -p examples/build/css/ && mkdir -p examples/build/js/",
     "build": "npm run build-dirs && npm run build-less && npm run build-js",
